fix var table overflow by making it scrollable

--- a/src/renderer/global.scss
+++ b/src/renderer/global.scss
@@ -30,6 +30,20 @@ body {
   background: #444;
 }
 
+.pretty-scroll {
+  &::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 7px;
+    height: 7px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  }
+}
+
 .app-wrapper {
   $wrapper-margin: 1rem;
 
